--- a/redis-cluster-bridge/docker-compose.yml
+++ b/redis-cluster-bridge/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       redis-cli -a ${PASSWORD} --cluster create\
       ${IP}:7001 ${IP}:7002 ${IP}:7003 ${IP}:7004 ${IP}:7005 ${IP}:7006 \
       --cluster-replicas 1 --cluster-yes"
-    restart: no
+    restart: "no"
     depends_on:
       - redis-7001
       - redis-7002
